--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
 button{
   width: 100px;
   height: 45px;
-  margin-left: 60px;
+  border-radius: 10px;
+  border: none;
   margin-top: 15px;
+  color: azure;
+  font-size: 22px;
 }
