--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -2,7 +2,7 @@
     margin-left: 300px;
     margin-top: 220px;
     font-size: 65px;
-
+    color: #1f2a3f;
 }
 .hello:hover{
     text-decoration: underline;
