--- a/src/component/MenuComponent/MenuComponent.module.css
+++ b/src/component/MenuComponent/MenuComponent.module.css
@@ -11,17 +11,17 @@
 .link{
     text-decoration: none;
     font-size: 22px;
-    color: #344c7a;
+    color: #293752;
     font-weight: bolder;
 }
 .link:hover{
     font-size: 24px;
-    color: #253759;
+    color: #1f2a3f;
     transition: 0.4s;
 }
 .box{
     width: 100%;
     height: 60px;
-    border-bottom: #2d436c 3px solid;
+    border-bottom: #1f2a3f 3px solid;
 }
 
